# wrench

./: .gitignore  .gitmodules  AGENTS.md  README.md  pixi.toml
src/ur5e_description/: CMakeLists.txt  package.xml
src/ur5e_description/config/: ur5e_controllers.yaml  ur5e_mujoco_inputs.xml  ur5e_scene.xml
src/ur5e_description/config/mjcf/: mujoco_description.xml  mujoco_description_formatted.xml  robot_description_formatted.urdf
src/ur5e_description/config/mjcf/assets/full/: mtl_base  mtl_forearm  mtl_shoulder  mtl_upperarm  mtl_wrist1  mtl_wrist2  mtl_wrist3
src/ur5e_description/config/mjcf/assets/full/base/: base.xml  material.mtl
src/ur5e_description/config/mjcf/assets/full/forearm/: forearm.xml  material.mtl
src/ur5e_description/config/mjcf/assets/full/shoulder/: material.mtl  shoulder.xml
src/ur5e_description/config/mjcf/assets/full/upperarm/: material.mtl  upperarm.xml
src/ur5e_description/config/mjcf/assets/full/wrist1/: material.mtl  wrist1.xml
src/ur5e_description/config/mjcf/assets/full/wrist2/: material.mtl  wrist2.xml
src/ur5e_description/config/mjcf/assets/full/wrist3/: material.mtl  wrist3.xml
src/ur5e_description/launch/: ur5e_mujoco.launch.py
src/ur5e_description/scripts/: generate_mjcf.sh
src/ur5e_description/urdf/: ur5e_mujoco.urdf.xacro
